2007-03-14  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/inchiformat.cpp, src/formats/cmlformat.cpp: Fix compile
	problems with GCC and last changes. (Return value from
	OBChiralData should be assigned to a full object.)

2007-03-13 Chris Morley
	
	* src/formats/inchiformat.cpp: Add bond stereo handling to
	ReadMolecule(). Correct 0D stereo in reading and writing.
	Remove the waring message about stereochemistry. Apart from
	a few special cases, e.g. allenes, 'either' parity, I think
	the InChI writing and reading is now ok., but still more 
	testing needed...
	TestFormat messages improved.
	
	* src/formats/xml/cmlformat.cpp: Correct handling of 0D
	atomParity on reading and writing.
	
	* src/GUI/optswx.cpp: Added documentation

2007-03-13  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefields/forcefieldghemical.cpp: Fix 1,4-scaling problem.

2007-03-13  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/forcefields/forcefieldmmff94.cpp: Switch pow() to use
	doubles to prevent compile problems on older Linux/GCC systems.
	Switch to using OpenDatafile.

	* src/logp.cpp, src/psa.cpp: Switch to use OpenDatafile() call.

	* src/fingerprints/finger3.cpp: Likewise.

	* src/forcefields/forcefieldmm2.cpp,
	src/forcefields/forcefieldghemical.cpp: Likewise.

	* src/formats/xml/Makefile.am, src/formats/xml/Makefile.in: Fix
	problems with compiling XML formats on Mac OS X.

	* include/openbabel/Makefile.am: Make sure to include psa.h and
	logp.h in distribution.

	* src/data.cpp: Move comments to provide better documentation for
	OpenDatafile. Switch OBGlobalDatabase::Init to OpenDatafile.

	* include/openbabel/data.h: Add envvar argument to OpenDatafile.

	* config.sub, config.guess, configure, Makefile.*: Update with
	automake-1.10 and autoconf-2.61.

2007-03-13  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* tool/obminimize.cpp: added '-sd', '-cg', '-c criteria' options
